Revision history for MojoX-Util-ResponseFilter

0.01 2011/03/31
  - initial release

0.02 2011/04/30
  - Disabled $res->fix_headers which sometimes causes the responce slow.

0.04 2011/06/15
  - Tested
  - Now it dies if loading middleware failed

0.05 2011/06/23
  - Got capable of filtering headers
  - Distribution renamed

0.06 2011/06/23
  - enable_if added

0.07 2011/06/23