@@ -1,25 +1,22 @@
 =head1 NAME
 
-MojoX::Util::ResponseFilter - ResponseFilter in Plack::Middleware style [EXPERIMENTAL]
+MojoX::Util::PlackMiddleware - ResponseFilter in Plack::Middleware style
 
 =head1 SYNOPSIS
 
     sub startup {
         ....
-
-        use MojoX::Util::ResponseFilter qw(enable enable_if);
-        enable($self, [
-            'Plack::Middleware::Some',
-            'Plack::Middleware::Some2' => \@args,
+        
+        my $self = shift;
+        
+        $self->plugin('plack_middleware', [
+            'Plack::Middleware::Some1', 
+            'Plack::Middleware::Some2', {arg1 => 'some_vale'}
         ]);
-        
-        enable_if($self,
-            sub {...}, [
-                'Plack::Middleware::Some',
-                'Plack::Middleware::Some2' => \@args,
-            ]
-        );
-        
+        $self->plugin('plack_middleware', [
+            'Plack::Middleware::Some1', sub {$condition}, 
+            'Plack::Middleware::Some2', sub {$condition}, {arg1 => 'some_vale'}
+        ]);
     }
     
     package Plack::Middleware::Some;
@@ -41,46 +38,12 @@ MojoX::Util::ResponseFilter - ResponseFilter in Plack::Middleware style [EXPERIM
 
 =head1 DESCRIPTION
 
-MojoX::Util::ResponseFilter allows you to activate Plack::Middleware style body
-filters on after_dispatch hook.
+Mojolicious::Plugin::PlackMiddleware allows you to activate Plack::Middleware
+style body filters on after_dispatch hook.
 
 =head1 METHODS
 
-=head2 MojoX::Util::ResponseFilter::enable($mojo_app, $args_array_ref)
-
-Sets Plack::Middleware::* to after_dispatch hook of mojo app as a callback.
-
-    MojoX::Util::ResponseFilter->enable($mojo_app, ['some::mw1','some::mw2'])
-
-Middleware arguments can be set in array refs following to package name.
-
-    MojoX::Util::ResponseFilter->enable($mojo_app, [
-        'some::mw1' => [$args1, $args2],
-        'some::mw2' => [$args1, $args2],
-    ])
-
-=head2 MojoX::Util::ResponseFilter::enable_if($mojo_app, $cb, $args_array_ref)
-
-enable_if is also available
-
-    enable_if($self,
-        sub {
-            my $mojo_controller = shift;
-            if (...) {
-                return 1;
-            }
-        }, [
-            'TestFilter',
-        ]
-    );
-
-=head1 METHOD
-
-=head2 enable($mojo_app, $middlewares)
-
-=head2 enable_if($mojo_app, $condition, $middlewares)
-
-if $condition is true, $middleware would be activate.
+=head2 register
 
 =head1 AUTHOR
 
