@@ -1,4 +1,4 @@
-Revision history for MojoX-Util-ResponseFilter
+Revision history for Mojolicious::Plugin::PlackMiddleware
 
 0.01 2011/03/31
   - initial release
@@ -18,3 +18,4 @@ Revision history for MojoX-Util-ResponseFilter
   - enable_if added
 
 0.07 2011/06/23
+  - API changed. Now this isa plugin
